--- a/Node.js/Funcionarios/package.json
+++ b/Node.js/Funcionarios/package.json
@@ -2,8 +2,9 @@
   "name": "funcionarios",
   "version": "1.0.0",
   "description": "Teste",
-  "main": "outro.js",
+  "main": "funcionarios.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matheus Brito",
